--- a/config.json
+++ b/config.json
@@ -3,9 +3,10 @@
     "port": 12345,
     "number_of_players": 3,
     "client_port_start": 2000,
-    "turn_time": 10,
+    "turn_time": 2,
     "init_time": 0.7,
     "number_of_turns": 165,
+    "minimum_number_of_turns": 126,
     "initial_troop": 35,
     "timeout": 1,
     "number_of_strategic_nodes_to_win": 4,
